--- a/proposal/probprog-2020-proposal.bib
+++ b/proposal/probprog-2020-proposal.bib
@@ -222,3 +222,25 @@
   year={2014},
   publisher={Springer}
 }
+
+@Article{Hunter2007matplotlib,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing in Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python for
+  application development, interactive scripting, and publication-quality
+  image generation across user interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@article{bokeh,
+title = {Bokeh: Python library for interactive visualization},
+author = {{Bokeh Development Team}},
+year = {2019},
+url = {https://bokeh.org/},
+}
